--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -8,6 +8,7 @@
 		justify-content: flex-start;
 		@include prefix(transition, background 0.3s);
 		cursor: text;
+		z-index: 90;
 
 		@include mq(max-width, 350px) {
 			padding: 1rem 0.75rem;
@@ -33,6 +34,7 @@
 					width: 1.25rem;
 				}
 			}
+			z-index: 100;
 		}
 
 		.form--input {
@@ -47,6 +49,7 @@
 			margin: 0;
 			flex: 1;
 			display: block;
+			z-index: 100;
 
 			&.error {
 				& + .form--label {
@@ -75,6 +78,7 @@
 		.form--area {
 			height: 11rem;
 			resize: vertical;
+			z-index: 100;
 
 			&::-webkit-scrollbar {
 				width: 8px;
