--- a/src/scss/_headers.scss
+++ b/src/scss/_headers.scss
@@ -6,7 +6,7 @@ h2,
 	font-size: fs('huge');
 	font-weight: 500;
 	margin: 0;
-	z-index: 100;
+	z-index: 6;
 }
 
 h3,
@@ -15,7 +15,7 @@ h3,
 	font-size: fs('x-big');
 	font-weight: 500;
 	margin: 0;
-	z-index: 100;
+	z-index: 6;
 }
 
 h4,
@@ -24,7 +24,7 @@ h4,
 	font-size: fs('big');
 	font-weight: 500;
 	margin: 0;
-	z-index: 100;
+	z-index: 6;
 }
 
 h5,
@@ -33,7 +33,7 @@ h5,
 	font-size: fs('normal');
 	font-weight: 500;
 	margin: 0;
-	z-index: 100;
+	z-index: 6;
 }
 
 h6,
@@ -42,5 +42,5 @@ h6,
 	font-size: fs('x-small');
 	font-weight: 500;
 	margin: 0;
-	z-index: 100;
+	z-index: 6;
 }
