--- a/src/scss/_site.scss
+++ b/src/scss/_site.scss
@@ -54,7 +54,7 @@ main {
 	&::-webkit-scrollbar {
 		display: none;
 	}
-	z-index: 800;
+	z-index: 2;
 
 	// padding-bottom: 59px;
 	padding-left: 24px;
