--- a/src/views/Project/Project.scss
+++ b/src/views/Project/Project.scss
@@ -57,6 +57,7 @@
 			align-items: stretch;
 			background-color: var(--light-color-40);
 			border: none;
+			z-index: 100;
 
 			.svg {
 				stroke-width: 1;
@@ -109,6 +110,7 @@
 		justify-content: stretch;
 		width: 100%;
 		align-items: stretch;
+		z-index: 10;
 
 		@include mq(min-width, 1280px) {
 			flex-direction: row;
@@ -138,6 +140,7 @@
 			justify-content: center;
 			align-items: stretch;
 			padding: 0 0.75rem;
+			z-index: 10;
 
 			@include mq(min-width, 600px) {
 				padding: 0 1rem;
@@ -189,6 +192,7 @@
 			border-bottom: 3px solid var(--purple-color);
 			align-self: stretch;
 			padding: 1.5rem 2rem;
+			z-index: 10;
 
 			@include mq(max-width, 400px) {
 				flex-direction: column;
